# v6-game-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README-notes.md  README.md
sandbox/: app.cpp  app.h
sandbox/assets/shaders/: texture.glsl
sandbox/include/: example-layer.h  sandbox-2d.h  sandbox.h  timer.h
sandbox/src/: example-layer.cpp  sandbox-2d.cpp  sandbox.cpp
v6/: CMakeLists.txt  v6-pch.h  v6.h
v6/debug/: instrumentor.h
v6/include/: application.h  core.h  input.h  key-codes.h  layer-stack.h  layer.h  log.h  mouse-button-codes.h  ortho-cam-controller.h  v6-pch.h  v6.h  window.h
v6/src/: application.cpp  layer-stack.cpp  layer.cpp  log.cpp  ortho-cam-controller.cpp
v6/src/core/: application.cpp  layer-stack.cpp  layer.cpp  log.cpp  timestep.h
v6/src/events/: application-event.h  event.h  key-event.h  mouse-event.h
v6/src/imgui-layer/: imgui-build.cpp  imgui-layer.cpp  imgui-layer.h  imgui_impl_glfw.h  imgui_impl_opengl3.h
v6/src/platform/linux/: v6-input.cpp  v6-input.h  v6-window.cpp  v6-window.h
v6/src/platform/opengl/: imgui-opengl-renderer.cpp  opengl-buffer.cpp  opengl-buffer.h  opengl-context.cpp  opengl-context.h  opengl-renderer-api.cpp  opengl-renderer-api.h  opengl-shader.cpp  opengl-shader.h  opengl-texture.cpp  opengl-texture.h  opengl-vertex-array.cpp  opengl-vertex-array.h
v6/src/renderer/: buffer.cpp  buffer.h  graphics-context.cpp  graphics-context.h  ortho-cam-controller.cpp  orthographic-camera.cpp  orthographic-camera.h  render-command.cpp  render-command.h  renderer-api.cpp  renderer-api.h  renderer.cpp  renderer.h  renderer2D.cpp  renderer2D.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex-array.cpp  vertex-array.h
